Added basic JS to frontend.
Added gems to load JS dependencies for todo jQuery app.
Added html response for showing a list, which just serves the jQuery 
app.
Updated the layout to include scripts at the bottom of the body tag and
with an improved title.
Added a root route that redirects to list 1.
Added source for Todo jQuery app and CSS.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Todomvc</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <meta charset="utf-8">
+  <title>jQuery • TodoMVC</title>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= yield %>
+  <%= javascript_include_tag 'application' %>
 </body>
 </html>
